<resources>
    <string name="app_name">WhiteRabbit</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_email">Your email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Join now</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="powerdBy">powerdBy</string>
    <string name="poiQuality">Ποιότητα χώρου</string>
    <string name="poiDistance">Απόσταση</string>
    <string name="poiFacilities">Παροχές/Υποδομές</string>
    <string name="action_settings">Settings</string>
    <string name="userProfile">Profile</string>
    <string name="action_exit">Exit</string>
    <string name="action_search">Search</string>
</resources>
