<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ergasia.omada5.WhiteRabbit.activities.SignInActivity">

    <LinearLayout
        android:id="@+id/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:enabled="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_light"
            android:id="@+id/imageView3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_light"
            android:id="@+id/imageView2"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_light"
            android:id="@+id/imageView"
            android:layout_gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/layout_top_bar"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="kd@gmail.com" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_gravity="center"
            android:text="123456" />

        <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="10sp"
            android:textAlignment="center"
            android:gravity="bottom|right"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:background="@color/cast_expanded_controller_background_color"
            android:textColor="@color/cast_expanded_controller_text_color" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:layout_below="@+id/layout_buttons"
            android:background="@color/cast_expanded_controller_text_color" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_bottom_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        android:enabled="false" />

        <TextView
            android:text="@string/powerdBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:clickable="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:textAllCaps="false"
            android:textSize="10sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_gravity="right|center_vertical" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/firebase_lockup_400"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="false"
            android:layout_gravity="right|center_vertical" />
    </LinearLayout>


</RelativeLayout>
